@@ -1,13 +1,14 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.camunda.docmosis;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
@@ -19,7 +20,6 @@ import uk.gov.hmcts.reform.civil.ga.enums.welshenhancements.PreTranslationGaDocu
 import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandlerTest;
 import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
 import uk.gov.hmcts.reform.civil.ga.model.genapplication.GeneralApplicationPbaDetails;
-import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.model.Fee;
@@ -69,30 +69,26 @@ import static uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder.CUSTOMER_REFE
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    GenerateApplicationDraftCallbackHandler.class,
-    JacksonAutoConfiguration.class,
-    CaseDetailsConverter.class,
-    AssignCategoryId.class
-})
+@ExtendWith(MockitoExtension.class)
 class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
 
-    @MockBean
+    @Mock
     private Time time;
-    @MockBean
+    @Mock
     private GeneralApplicationDraftGenerator generalApplicationDraftGenerator;
-    @Autowired
+    @InjectMocks
     private GenerateApplicationDraftCallbackHandler handler;
-    @Autowired
-    private final ObjectMapper mapper = new ObjectMapper();
-    @Autowired
-    private AssignCategoryId assignCategoryId;
-    @MockBean
+    @Spy
+    private ObjectMapper mapper = new ObjectMapper()
+        .registerModule(new JavaTimeModule())
+        .disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+    @Spy
+    private AssignCategoryId assignCategoryId = new AssignCategoryId();
+    @Mock
     private FeatureToggleService featureToggleService;
-    @MockBean
+    @Mock
     private GeneralAppFeesService generalAppFeesService;
-    @MockBean
+    @Mock
     private GaForLipService gaForLipService;
 
     private final LocalDate submittedOn = now();
@@ -132,18 +128,17 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -153,6 +148,8 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, YES, NO);
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
+
+        handler.handle(params);
 
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
@@ -165,11 +162,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -177,7 +173,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -190,10 +186,9 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -202,7 +197,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -218,15 +213,14 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.APPLICATION_SUMMARY_DOC);
     }
@@ -243,15 +237,14 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.APPLICATION_SUMMARY_DOC);
     }
@@ -268,16 +261,15 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
 
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getPreTranslationGaDocumentType()).isEqualTo(PreTranslationGaDocumentType.RESPOND_TO_APPLICATION_SUMMARY_DOC);
     }
@@ -294,16 +286,15 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
 
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-        assertThat(updatedData.getPreTranslationGaDocuments().get(0).getValue())
+        assertThat(updatedData.getPreTranslationGaDocuments().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
     }
 
@@ -315,11 +306,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("FREE").build()).build()).build();
+                                      .fee(new Fee().setCode("FREE")).build()).build();
         when(generalAppFeesService.isFreeApplication(any(GeneralApplicationCaseData.class))).thenReturn(true);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
@@ -328,7 +318,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -338,8 +328,9 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
         GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, NO, NO);
         when(generalAppFeesService.isFreeApplication(any(GeneralApplicationCaseData.class))).thenReturn(false);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+
+        handler.handle(params);
 
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
@@ -350,11 +341,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         when(gaForLipService.isGaForLip(any())).thenReturn(false);
         caseData = caseData.toBuilder()
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-        when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
-            .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
+
+        handler.handle(params);
 
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
@@ -367,11 +357,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -379,7 +368,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -393,11 +382,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("NotFree").build()).build()).build();
+                                      .fee(new Fee().setCode("NotFree")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -405,7 +393,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -419,11 +407,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
                                       .paymentDetails(PaymentDetails.builder()
                                                           .status(PaymentStatus.SUCCESS).build())
-                                      .fee(Fee.builder().code("Free").build()).build()).build();
+                                      .fee(new Fee().setCode("Free")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
             .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
@@ -431,7 +418,7 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
 
         GeneralApplicationCaseData updatedData = mapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
-        assertThat(updatedData.getGaDraftDocument().get(0).getValue())
+        assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
             .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
         assertThat(updatedData.getSubmittedOn()).isEqualTo(submittedOn);
     }
@@ -443,13 +430,10 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
         when(generalAppFeesService.isFreeApplication(any())).thenReturn(false);
         caseData = caseData.toBuilder()
             .generalAppPBADetails(GeneralApplicationPbaDetails.builder()
-                                      .fee(Fee.builder().code("Free").build()).build()).build();
+                                      .fee(new Fee().setCode("Free")).build()).build();
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
-        when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
-            .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-        when(time.now()).thenReturn(submittedOn.atStartOfDay());
 
-        var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+        handler.handle(params);
         verifyNoInteractions(generalApplicationDraftGenerator);
     }
 
@@ -508,11 +492,11 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
             .generalAppPBADetails(
                 GAPbaDetails.builder()
                     .fee(
-                        Fee.builder()
-                            .code("FE203")
-                            .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                            .version("1")
-                            .build())
+                        new Fee()
+                            .setCode("FE203")
+                            .setCalculatedAmountInPence(BigDecimal.valueOf(27500))
+                            .setVersion("1")
+                            )
                     .serviceReqReference(CUSTOMER_REFERENCE).build())
             .generalAppDetailsOfOrder(STRING_CONSTANT)
             .generalAppReasonsOfOrder(STRING_CONSTANT)
@@ -532,8 +516,8 @@ class GenerateApplicationDraftCallbackHandlerTest extends GeneralApplicationBase
                                                              .email("abc@gmail.com").build()))
             .isMultiParty(NO)
             .parentClaimantIsApplicant(YES)
-            .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                          .caseReference(PARENT_CCD_REF.toString()).build())
+            .generalAppParentCaseLink(new GeneralAppParentCaseLink()
+                                          .setCaseReference(PARENT_CCD_REF.toString()))
             .build();
     }
 
